--- a/simplexlspreview/build.gradle
+++ b/simplexlspreview/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api project(path: ':form')
-    api 'com.github.huangyanbin:SmartChart:1.3.2'
+    compile project(path: ':form')
+    compile 'com.github.huangyanbin:SmartChart:1.3.2'
 }
