--- a/simplexlspreview/build.gradle
+++ b/simplexlspreview/build.gradle
@@ -29,11 +29,20 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:25.3.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile project(path: ':form')
     compile 'com.github.huangyanbin:SmartChart:1.3.2'
+
+    compile files('libs/commons-collections4-4.1.jar')
+    compile files('libs/poi-3.17.jar')
+    compile files('libs/poi-ooxml-3.17.jar')
+    compile files('libs/poi-ooxml-schemas-3.17.jar')
+    compile files('libs/poi-scratchpad-3.17.jar')
+    compile files('libs/rt.jar')
+    compile files('libs/xmlbeans-2.6.0.jar')
+
+
 }
